hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_generic_class.php.like_types.exp
File "explicit_type_collection_generic_class.php", line 7, characters 12-37:
Some elements in this collection are incompatible (Typing[4110])
File "explicit_type_collection_generic_class.php", line 7, characters 16-16:
Expected T
File "explicit_type_collection_generic_class.php", line 6, characters 21-21:
But got dynamic because it is an unenforceable type
