hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_generic_class.php
<?hh // strict

class foo<T>{
  private T $var;
  public function __construct(T $x){ $this->var = $x; }
  public function f(T $value): vec<T> {
    return vec<T>[$value, $this->var];
  }
}
